<resources>
    <string name="app_name">Kalyan Bazar</string>
    <!--<string name="app_name">Sara777</string>-->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dev_name">Dev</string>
    <string name="thanks_msg">Thanks</string>
    <string name="mail">Mail</string>
    <string name="email_subject">email</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="notconected">You are not connected to internet. Please check your internet connection</string>
    <string name="single_digit">Single Digit</string>
    <string name="jodi_digit">Jodi Digit</string>
    <string name="single_pana">Single Panna</string>
    <string name="pana">Panna</string>
    <string name="doublef_digit">Double Panna</string>
    <string name="triple_digit">Triple Panna</string>
    <string name="half_sangam">Half Sangam</string>
    <string name="full_sangam">Full Sangam</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="enter_your_mobile">Enter your mobile number</string>
    <string name="notaccount">Don\'t have an account? REGISTER</string>
    <string name="notaccount_register">Register Now</string>
    <string name="alreadyaccount">Already have an account? LOGIN</string>
    <string name="alreadyaccount_login">Login</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="see_full_profile">See Full Profile</string>
    <string name="change_password">Change Password</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="win_history">Win History</string>
    <string name="game_rates">Game Rates</string>
    <string name="bid_history">Bid History</string>
    <string name="information">Information</string>
    <string name="how_to_play">How To Play</string>
    <string name="add_funds">Add Points</string>
    <string name="withdraw_funds">Withdrawal Points</string>
    <string name="share_point">Share Point</string>
    <string name="support">Support</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="rate_app">Rate App</string>
    <string name="term_condtions">Terms &amp; Condition</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="please_enter_your_new_password">Please enter your new Password</string>
    <string name="new_password_must_be_of_at_least_4_characters_length">New password must be of at least 4 characters length</string>
    <string name="please_enter_conform_password">Please enter conform password</string>
    <string name="password_not_match">Password not matching</string>

    <string name="cf1bhoose_session">Choose Session</string>
    <string name="opef1bn">Open</string>
    <string name="closf1be">Close</string>
    <string name="digf1bits">Digit</string>
    <string name="enterf1b_digits">Enter Digit</string>
    <string name="enter_pana">Enter Pana</string>
    <string name="pof1bints">Amount</string>
    <string name="enterpoints">Enter Points</string>
    <string name="prf1boceed">Proceed</string>
    <string name="point">Points</string>
    <string name="wweff1b">upi id</string>
    <string name="game_data">upi id</string>
    <string name="history_activityf1b">upi id</string>
    <string name="assgoogle_pay">G Pay</string>
    <string name="asspay">Add Points</string>
    <string name="phonepeass">PhonePe</string>
    <string name="asspaytm">PayTM</string>
    <string name="assrazorpay">Razorpay</string>
    <string name="ddd">Withdrawal Point</string>
    <string name="wfede">Enter Amount</string>
    <string name="sgbv">Select Payment Method</string>
    <string name="lkh">Add Withdrawal Payment Method</string>
    <string name="holdername">Account Holder Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="gasselect_gateway">Select Payment Gateway</string>
    <string name="ghosselect_amount">Select Points Amount</string>
    <string name="vv500">500</string>
    <string name="v1000vv">1000</string>
    <string name="v2000vv">2000</string>
    <string name="account_number">Account Number</string>
    <string name="your_account_number">Enter Your Account Number</string>
    <string name="confirm_your_account_number">Confirm Account Number</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="enter_fisc_code">Enter IFSC code</string>
    <string name="branchaddress">Branch Address</string>
    <string name="enter_branch_address">Enter Branch Address</string>
    <string name="bankname">Bank Name</string>
    <string name="v5000vv">5000</string>
    <string name="v10000vv">10000</string>
    <string name="aassupitxt">You will get only 10 points on Registration.</string>
    <string name="payass_partner">Our Official Payment Partners</string>
    <string name="content_deskyop">Content Description</string>
    <string name="ass_bank_details">Bank Details</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="other_pay">PhonePe, Google Pay, Paytm, UPI</string>
    <string name="proceed1ass">Submit</string>
    <string name="left_digit_ass">Left Digit</string>
    <string name="ass_right_digit">Right Digit</string>
    <string name="gali_disawar_gameasses">Gali Disawar Rates</string>
    <string name="point_available">Points Available</string>
    <string name="cc">Points</string>
    <string name="pd">Submit</string>
    <string name="cv">Search</string>
    <string name="withdraw_open_time">Withdrawal Open time</string>
    <string name="withdraw_close_time">Withdrawal Close time</string>
    <string name="minimum_withdrawal_points">Minimum withdrawal points</string>
    <string name="history">History</string>
    <string name="whatsupp">Whatsupp</string>
    <string name="go">Go</string>
    <string name="choose_date">Choose Date</string>
    <string name="chart">CHART</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clr">CLR</string>
    <string name="_0">0</string>
    <string name="delete">DEL</string>
    <string name="fp">fp</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="play_icon">Play Icon</string>

    <string name="please_enter_your_security_pin">Please Enter your Security Pin</string>
    <string name="enter_your_upi_id">Enter Your UPI ID</string>
    <string name="transfer_fund">Transfer Points</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_query_here">Enter Your Query Here</string>



    <string-array name="Languages">
        <item>Bank</item>
        <item>Paytm</item>
        <item>Phone Pay</item>
        <item>Gpay</item>
    </string-array>
</resources>