<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_gradient"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/toolbar"
            layout="@layout/header" />


    </RelativeLayout>
        <androidx.core.widget.NestedScrollView
            android:background="@color/light_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_tool">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="30dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/holdername"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_number"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white"
                    android:hint="@string/your_account_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:lines="1"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_your_account_number"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confAcNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/confirm_your_account_number"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ifsccode"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ifsc_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enter_fisc_code"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:lines="1"
                    android:maxLength="11"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bankname"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enter_bank_name"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/branchaddress"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_border"
                    android:backgroundTint="@color/white_opacity"
                    android:gravity="top"
                    android:hint="@string/enter_branch_address"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/yellowdark"
                    android:gravity="center"
                    android:onClick="submitInfo"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="12dp"
                    android:text="@string/pd"
                    android:textAllCaps="true"
                    android:textColor="@color/white_opacity"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>