<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_gradient"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/header" />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_tool"
            android:background="@color/light_green"
            android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_bid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/choose_date"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/choose_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/white"
                    android:backgroundTint="@color/white_opacity"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black_dark"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/chooseSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/cf1bhoose_session"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white"
                        android:backgroundTint="@color/white_opacity"
                        android:checked="true"
                        android:text="@string/opef1bn"
                        android:textColor="@color/black_dark" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/white"
                        android:backgroundTint="@color/white_opacity"
                        android:text="@string/closf1be"
                        android:textColor="@color/black_dark" />
                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/digText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/digf1bits"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/input_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/white"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enterf1b_digits"
                    android:inputType="number"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black_dark" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/openCD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="10dp"
                    android:text="@string/digf1bits"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/inputCD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/white"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enterf1b_digits"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/black_dark"
                    android:visibility="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/pof1bints"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCoins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/white"
                    android:backgroundTint="@color/white_opacity"
                    android:hint="@string/enterpoints"
                    android:inputType="number"
                    android:maxLength="9"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black_dark" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/yellowdark"
                    android:gravity="center"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="12dp"
                    android:text="@string/prf1boceed"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="20dp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </RelativeLayout>
</layout>